<resources>
    <string name="app_name">I Love Food</string>
    <string name="RUdiet">Are you on a diet?</string>
    <string name="recipes">Recipes</string>
    <string name="select_food_item">Select Food Item</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!--category of recipe
    -->
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="soups">Soups</string>
    <string name="salads">Salads</string>
    <string name="desserts">Desserts</string>
    <string name="entertaining">Entertaining</string>

    <string name="list_food">List of  </string>

    <string name="Questionnaire">"I Love Food" App Questionnaire </string>
    <string name="Go_Questionnaire">Questionnaire  - > </string>
    <string name="Question_1"> How easy is it to find the information you are looking for in "I Love Food" apps?</string>
    <string name="Answer1_Question_1">Extremely easy </string>
    <string name="Answer2_Question_1">Very easy </string>

    <string name="Answer3_Question_1">Moderately easy </string>

    <string name="Answer4_Question_1">Slightly easy </string>
    <string name="Answer5_Question_1">Not at all easy </string>


    <string name="Question_2"> How likely are you to recommend "I Love Food" apps to others?</string>
    <string name="Answer1_Question_2"> Very likely </string>
    <string name="Answer2_Question_2"> Moderately likely</string>

    <string name="Answer3_Question_2">Not at all likely </string>
    <string name="done">Done</string>

    <string name="TypeAllergy">Types of Food Allergy</string>
    <string name="Allergy">Allergy</string>

    <string name="age">Age: </string>
    <string name="F_OR_M">Are you female or male?</string>


    <string-array name="age_array">
        <item>Children (00 &#8211; 14 years)</item>
        <item>Youth (15&#8211;24 years)</item>
        <item>Adults (25&#8211;64 years)</item>
        <item>Seniors (65 years and over)</item>
    </string-array>
    <string-array name="contents_help_array">
        <item>Brief help text permanently embedded in the interface. Writing full sentences explaining a feature or the outcome of actions your user is about to take can be a powerful concept. It will help new users understand things better and reassure existing users in what they’re about to do.</item>
        <item>Surprisingly many websites and web applications nowadays have extremely short labels with no explanations next to their form fields. Unless you intrinsically understand the feature, you’re lost. With embedded instructions you replace the “Name” label of your form with “Name the project”, and perhaps you even add an example or two as well (see above screenshot). This guides the user through the screen.</item>
        <item>This is of course a balancing act. When dealing with simple screens and features that are used frequently (e.g. adding a to-do item to a task manager), embedded help may be overkill. However, for screens that aren’t used frequently and features that aren’t necessarily intuitive, embedded help can be a great choice.</item>
    </string-array>
    <string-array name="titles_help_array">
        <item>Step 1</item>
        <item>Step 2 </item>
        <item>Step 3 </item>
    </string-array>

    <string name="multi_pane">Multi Pane</string>
    <string name="main_pane">Main Pane</string>
    <string name="side_pane">Side_Pane</string>

    <string name="item_menu_help">Help</string>
    <string name="item_menu_about">About App</string>
    <string name="item_menu_web_page">Web page</string>
</resources>
