<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.poplar.isun.ilovefood.QuestionnairActivity"
    android:orientation="vertical"
    android:weightSum="10"
    android:layout_margin="10dp">
    <TextView
        android:id="@+id/tv_list_questionnaire"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1"

        android:text="@string/Questionnaire"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text=
            "@string/Question_1" />

    <RadioGroup
        android:id="@+id/rg_Question_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <RadioButton
            android:id="@+id/rb1_answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Answer1_Question_1" />

        <RadioButton
            android:id="@+id/rb1_answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Answer2_Question_1" />

        <RadioButton
            android:id="@+id/rb1_answer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Answer3_Question_1" />

        <RadioButton
            android:id="@+id/rb1_answer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Answer4_Question_1" />

        <RadioButton
            android:id="@+id/rb1_answer5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Answer5_Question_1" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/Question_2" />

    <RadioGroup
        android:id="@+id/rg_Question_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/rb2_answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Answer1_Question_2" />

        <RadioButton
            android:id="@+id/rb2_answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Answer2_Question_2" />

        <RadioButton
            android:id="@+id/rb2_answer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Answer3_Question_2" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_done"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/done"
        android:background="@android:color/holo_green_dark"
        android:textStyle="bold"
        android:textColor="@android:color/white"/>

</LinearLayout>
